app/assets/stylesheets/application.css
html{
    font-size: 20px;
    background-color: black;
    font-family: 'Montserrat', sans-serif;
    top: 0;
    left: 0;

}

.notice{
    background-color: rgba(235, 224, 75, 0.95);
    color: rgba(46, 156, 252, 0.8);
    width:6.5rem;
}

.container{
    width: 25rem;
    height: 25rem;
    background-color: rgba(46, 156, 252, 0.8);
    color:rgba(235, 224, 75, 0.95);
    position: relative;
    top: 0;
    left: 0;
    margin-left: auto;
    margin-right: auto;
    display: block;
    text-align: center;
    border-radius: 8px;
    box-sizing: content-box;
    overflow: scroll;
}

a{
    text-decoration: none;
    font-weight: normal;
    cursor: pointer;
}
a:visited{
    text-decoration: none;
    font-weight: normal;
    cursor: pointer;
}

.navbar{
    height: 15%;
    top: 0;
    left: 0;
    position: relative;
}

.logo{
    color: rgba(235, 224, 75, 0.95);
    top: 0;
    left: 0;
    text-align: center;
    position: relative;
    display: block;
    padding-top: 5%;
}

/* ################ HOME ################ */

.home_links_container{
    padding-top: 15%;
    margin-top: 15%;
    text-align: center;
    position: relative;
    display: block;
}

.home_links{
    background-color:rgba(235, 224, 75, 0.95);
    color: rgb(3, 3, 3);
    height: 30px;
    font-size: 20px;
    font-weight: 500;
    width: 270px;
    padding-top: 6px;
    padding-bottom: 2px;
    display: block;
    margin: auto;
    margin-top: 30px;
    box-shadow: rgb(37, 37, 37) 1px 1.5px 1.5px;
    border-radius: 8px;
}

input.google{
    background-color: rgba(235, 224, 75, 0.95);
    color: rgb(3, 3, 3);
    height: 38px;
    font-size: 20px;
    font-weight: 400;
    width: 270px;
    padding-top: 6px;
    padding-bottom: 2px;
    display: block;
    margin: auto;
    margin-top: 1.5rem;
    border: none;
    box-shadow: rgb(37, 37, 37) 1px 1.5px 1.5px;
    border-radius: 8px;
}

/* ################ Receipts ################ */

.links_container{
    height: 1rem;
    text-align: center;
    position: relative;
    display: block;
    width: 25rem;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2rem;
}

.stores_links_container{
    height: 1rem;
    text-align: center;
    position: relative;
    display: block;
    width: 25rem;
    margin-left: auto;
    margin-right: auto;
    
}

.links{
    background-color:rgba(235, 224, 75, 0.95);
    color: rgb(3, 3, 3);
    height: 1.5rem;
    margin-left: .3rem;
    font-size: 20px;
    font-weight: 500;
    width: 12rem;
    padding-top: 6px;
    padding-bottom: 2px;
    display: block;
    float: left;
    box-shadow: rgb(37, 37, 37) 1px 1.5px 1.5px;
    border-radius: 8px;
}

.store_link{
    background-color:rgba(235, 224, 75, 0.95);
    color: rgb(3, 3, 3);
    height: 1.5rem;
    margin-left: auto;
    margin-right: auto;
    font-size: 20px;
    font-weight: 500;
    width: 12rem;
    padding-top: 6px;
    padding-bottom: 2px;
    display: block;
    box-shadow: rgb(37, 37, 37) 1px 1.5px 1.5px;
    border-radius: 8px;
}

.banner{
    padding-top: 3rem;
}

.info{
    padding-top: 1rem;
}

.extra_info{
    font-size: 0.5rem;
    clear: both;
}

a.extra_info_link{
    font-size: 0.5rem;
    background-color: rgba(235, 224, 75, 0.95);
    color: rgba(46, 156, 252, 0.8);

}

a.extra_info_link:visited{
    font-size: 0.5rem;
    background-color: rgba(235, 224, 75, 0.95);
    color: rgba(46, 156, 252, 0.8);
}

.form{
    width: 85%;
    position: relative;
    margin: auto;
    overflow: scroll;
}

.label{
    float: left;
    width: 45%;
    text-align: left;
    padding: 0;
    height: 20px;
}

.input{
    float: right;
    width: 50.5%;
    background-color: rgba(235, 224, 75, 0.95);
    color: rgba(46, 156, 252, 0.8);
}

.name{
    font-size: 15px;
}

.store_label{
    padding-top: 5px;
}

.time_label{
    padding-top: 3px;
}

.date_label{
    padding-top: 1px;
}

.date, .time{ 
    width: 51%;
    margin-bottom: 3px;
}

select.input{
    width: 52%;
    font-size: 0.85rem;
    background-color: rgba(235, 224, 75, 0.95);
    color: rgba(46, 156, 252, 0.8);
    margin-bottom: 1px;
}
input.submit{
    text-align: center;
    margin-top: 2rem;
    background-color: rgba(235, 224, 75, 0.95);
    color: rgba(46, 156, 252, 0.8);
    margin-bottom: 2rem;
    position: relative;
    margin-left: auto;
    margin-right: auto;
}
input.submit_item{
    text-align: center;
    margin-top: 2rem;
    background-color: rgba(235, 224, 75, 0.95);
    color: rgba(46, 156, 252, 0.8);
    margin-bottom: 2rem;
    margin-left: auto;
    margin-right: auto;
}

a.links_to_ind{
    color: rgba(235, 224, 75, 0.95);
    width: 100%;
}

a.links_to_ind:visited{
    color: rgba(235, 224, 75, 0.95);
    width: 100%;
}

ul{
    padding: 0;
}

li{
    list-style: none;
    padding: 0;
}

.underline{
    text-decoration: underline;
}

.add_ons{
    float: right;
    width: 50%;
    margin-top: 0;
}

.items{
    float: left;
    width: 40%;
}

.items_notes{
    float: right;
    width: 30%;
    margin-right: 1rem;
}

.receipt_notes{
    float: left;
    width: 35%;
    margin-top: 1rem;
}

.receipt_store_name{
    float: right;
    width: 50%;
}

@media only screen and (min-width: 1500px) {
    .container{
        clear:both
    }
}

